tls-example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - myapp.com
    secretName: myapp-scret-tls
  rules:
  - host: myapp.com
    http:
      paths:
        - path: /analytics
          backend:
            service:
              name: myapp-internal-service
              port:
                number: 8080
